2004-08-12	blytkerchan
	* parse.y: make a %token definition for each missing lexical token
	(declaration): include function_declaration
	(alias_declaration): revise alias declaration grammar to be more
	coherent with function and variable declarations
	allow aliases of functions
	(variable_declaration): revise grammar according to discussions on
	jail-ust-lang
	(function_declaration): new production

2004-08-03	blytkerchan
	* parse.y: add function attribute definition as per
	http://tinyurl.com/3t3sh

2004-08-02	blytkerchan
	* parse.y: add function_body and function_body_contents productions as
	discussed in http://tinyurl.com/4m3pq

2004-07-14	blytkerchan
	* Makefile: new file

	* parse.y: start a second shot at the grammar - restart from scratch

2003-09-12	blytkerchan
	* parse.y: update function definition according to results of a 
                   discussion on jail-ust-lang
	* AUTHORS: new file
	* ChangeLog: ditto

2003-07-23	blytkerchan
	* parse.y: new file
